@@ -24,6 +24,10 @@ NightSky Hosting</a><br><br>
 
 <li><a href="http://gravital.net/" TARGET="Resource Window">Gravital Dot Net</a><br><br>
 
+<li><a href="http://graphics.stanford.edu/" TARGET="Resource Window">Stanford Computer Graphics Laboratory</a><br><br>
+
+<li><a href="http://centralpets.com/" TARGET="Resource Window">CentralPets</a><br><br>
+
 <li><a href="http://my.gnus.org/" TARGET="Resource Window">my.gnus.org</a><br><br>
 
 <li><a href="http://mail.socha.net/" TARGET="Resource Window">mail.socha.net</a><br><br>
