@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Aug 19 11:29:08 2002 -->
+<!-- Tue Aug 27 13:17:23 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -160,6 +160,10 @@ NightSky Hosting</a><br><br>
 <li><a href="http://escrubber.biz/" TARGET="Resource Window">eScrubber</a><br><br>
 
 <li><a href="http://gravital.net/" TARGET="Resource Window">Gravital Dot Net</a><br><br>
+
+<li><a href="http://graphics.stanford.edu/" TARGET="Resource Window">Stanford Computer Graphics Laboratory</a><br><br>
+
+<li><a href="http://centralpets.com/" TARGET="Resource Window">CentralPets</a><br><br>
 
 <li><a href="http://my.gnus.org/" TARGET="Resource Window">my.gnus.org</a><br><br>
 
