@@ -1,3 +1,8 @@
+2002-08-27  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* inuse.ht (Links): Add Stanford Computer Graphics Laboratory and
+	CentralPets.
+	
 2002-08-26  Tim Legant  <tim@catseye.net>
 
 	* config-filter.ht (username): Fixed example under Variable
